--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
         />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
         <title>esp-cloud-test</title>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"
+            type="text/javascript"
+        ></script>
     </head>
     <body>
         <noscript>
